--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,9 @@ tmp/
 *.swp
 *~.nib
 local.properties
-.classpath
-.settings/
-.loadpath
+#.classpath
+#.settings/
+#.loadpath
 
 # External tool builders
 .externalToolBuilders/
