Made all the things i could use relative paths

--- a/dan-for-all-seasons-android/.classpath
+++ b/dan-for-all-seasons-android/.classpath
@@ -5,8 +5,8 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Tyler/workspace/ChimeraRedux/dan-for-all-seasons/libs/gdx.jar" sourcepath="/dan-for-all-seasons/libs/gdx-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gdx-backend-android.jar" sourcepath="libs/gdx-backend-android-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Tyler/workspace/ChimeraRedux/dan-for-all-seasons/libs/tween-engine-api.jar" sourcepath="/dan-for-all-seasons/libs/tween-engine-api-sources.jar"/>
+	<classpathentry kind="lib" path="/dan-for-all-seasons/libs/gdx.jar" sourcepath="/dan-for-all-seasons/libs/gdx-sources.jar"/>
+	<classpathentry kind="lib" path="/dan-for-all-seasons/libs/tween-engine-api.jar" sourcepath="/dan-for-all-seasons/libs/tween-engine-api-sources.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
