--- a/dan-for-all-seasons-android/.classpath
+++ b/dan-for-all-seasons-android/.classpath
@@ -4,9 +4,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="lib" path="libs/gdx-backend-android.jar" sourcepath="libs/gdx-backend-android-sources.jar"/>
 	<classpathentry kind="lib" path="/dan-for-all-seasons/libs/gdx.jar" sourcepath="/dan-for-all-seasons/libs/gdx-sources.jar"/>
 	<classpathentry kind="lib" path="/dan-for-all-seasons/libs/tween-engine-api.jar" sourcepath="/dan-for-all-seasons/libs/tween-engine-api-sources.jar"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
