--- a/dan-for-all-seasons-desktop/.project
+++ b/dan-for-all-seasons-desktop/.project
@@ -18,7 +18,7 @@
 		<link>
 			<name>assets</name>
 			<type>2</type>
-			<locationURI>DAN_ANDROID/assets</locationURI>
+			<location>/Users/peteraltosaar/Documents/Programming/ChimeraRedux/dan-for-all-seasons-android/assets</location>
 		</link>
 	</linkedResources>
 	<variableList>
