--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,24 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
